--- a/styles/layout/scroll.css
+++ b/styles/layout/scroll.css
@@ -35,7 +35,6 @@
 
 .horizontal-scroll-grid {
     display: flex;
-    gap: 1rem;
     padding-bottom: 0.5rem;
 }
 
@@ -43,7 +42,13 @@
 .horizontal-scroll-grid::after {
     content: '';
     flex-shrink: 0;
-    width: 0.1rem;
+    width: 1rem;
+}
+
+.horizontal-scroll-grid::before {
+    content: '';
+    flex-shrink: 0;
+    width: 0.7rem;
 }
 
 .horizontal-scroll-grid .property-card-home-page {
