--- a/styles/layout/sections.css
+++ b/styles/layout/sections.css
@@ -142,7 +142,7 @@
     width: 100%;
     /* matches text width */
     height: 2px;
-    background-color: #c2c2c2;
+    background: #cacaca;
     border-radius: 2px;
 }
 
