--- a/styles/components/settings.css
+++ b/styles/components/settings.css
@@ -13,7 +13,8 @@
 }
 
 /* Ensure settings header is fixed at the top */
-#settings-header, #auction-property-main-page-detail-header {
+#settings-header,
+#auction-property-main-page-detail-header {
     position: fixed !important;
     top: 0 !important;
     left: 0 !important;
