--- a/styles/base/reset.css
+++ b/styles/base/reset.css
@@ -1,4 +1,4 @@
-/* Reset and Base Styles */
+﻿/* Reset and Base Styles */
 * {
     margin: 0;
     padding: 0;
@@ -11,11 +11,16 @@
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 *:focus {
     outline: none !important;
+}
+
+html {
+    height: 100vh;
+    overflow: hidden;
 }
 
 body {
@@ -23,6 +28,9 @@ body {
     background-color: #e8e8e8;
     color: #333;
     line-height: 1.6;
-    padding-bottom: 80px;
+    height: 100vh;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
     direction: rtl;
 }
