--- a/styles/layout/sections.css
+++ b/styles/layout/sections.css
@@ -2,8 +2,8 @@
 #app-content {
     margin-bottom: 0;
     position: relative;
-    overflow: hidden;
-    height: 100vh;
+    overflow-y: auto;
+    min-height: 100vh;
     box-sizing: border-box;
 }
 
