--- a/styles/layout/sections.css
+++ b/styles/layout/sections.css
@@ -2,7 +2,7 @@
 #app-content {
     margin-bottom: 0;
     position: relative;
-    overflow-y: auto;
+    overflow: hidden;
     min-height: 100vh;
     box-sizing: border-box;
 }
