--- a/styles/components/account-tabs.css
+++ b/styles/components/account-tabs.css
@@ -43,6 +43,7 @@
     flex-shrink: 0;
     padding: 0;
     margin: 0;
+    margin-right: 0.5rem;
     position: absolute;
     right: var(--spacing-md);
     top: 50%;
