--- a/styles/components/auction-property-detail.css
+++ b/styles/components/auction-property-detail.css
@@ -108,6 +108,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    justify-self: center;
 }
 
 .auction-property-main-page-detail-top-image img {
