--- a/styles/pages/responsive.css
+++ b/styles/pages/responsive.css
@@ -194,6 +194,14 @@
     .nav-icon {
         font-size: 1.75rem;
     }
+
+    .settings-container {
+        width: 80%;
+    }
+
+    .auction-property-main-page-detail-top-image {
+        width: 30rem;
+    }
 }
 
 /* Desktop Styles */
