--- a/styles/main.css
+++ b/styles/main.css
@@ -31,6 +31,7 @@
 @import url('components/user-fav.css');
 @import url('components/auction-property-detail.css');
 @import url('components/toast-message.css');
+@import url('components/ios-install-guide.css');
 
 
 @import url('components/card-components.css');
