--- a/styles/components/auction-card.css
+++ b/styles/components/auction-card.css
@@ -150,7 +150,12 @@
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
-    padding: 0 0.5rem;
+}
+
+.auction-property-main-page-detail-flip-clock-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
 /* Time Group (e.g., days with label) */
@@ -170,7 +175,7 @@
 
 /* Individual Digit Box */
 .flip-digit-box {
-    width: 2rem;
+    width: 1.7rem;
     height: 2.5rem;
     background-color: #E6E6E6;
     border-radius: var(--radius-sm);
